--- a/style.css
+++ b/style.css
@@ -49,6 +49,9 @@ main {
 .page-title {
   margin: 20px 10px 20px 10px;
 }
+.page-title.project-title {
+  margin: 10px;
+}
 .page-title-p {
   margin: 10px;
   /*margin-bottom: 10px;*/
