--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
   margin: 0;
-  font-family: "Roboto Slab", sans-serif;
+  font-family: "Rubik Regular", sans-serif;
   background-color: whitesmoke;
+}
+@font-face {
+  font-family: Rubik Regular;
+  src: url(media/Rubik.ttf);
 }
 img {
   cursor: grab;
@@ -93,7 +97,7 @@ h6 {
 }
 /* BUTTON START */
 .button-links {
-  font-family: "Roboto Slab", sans-serif;
+  font-family: "Rubik Regular", sans-serif;
   background-color: rgba(51, 51, 51, 0.05);
   border-radius: 8px;
   border-width: 0;
