--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@ img {
   cursor: grab;
 }
 header {
-  height: 100px;
+  height: auto;
   width: 100vw;
   background-color: #FFFFFF;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
   display: flex;
   justify-content: space-between;
-  flex-direction: row;
+  flex-direction: column;
+  padding-bottom: 10px;
 }
 ul {
   margin: 0;
@@ -32,9 +33,12 @@ ul {
   justify-content: center;
 }
 .header-right-side {
+  height: auto;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 main {
   width: 100vw;
@@ -49,7 +53,7 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  max-width: 800px;
+  width: calc(100vw - 20px);
 }
 .page-title {
   margin: 20px 10px 20px 10px;
@@ -62,17 +66,19 @@ main {
   /*margin-bottom: 10px;*/
 }
 hr {
-  width: 800px;
+  width: calc(100vw - 10%);
   height: 2px;
   background-color: #000000;
 }
 hr.short {
-  width: 350px;
+  width: calc(100vw - 30%);
 }
 hr.medium {
-  width: 500px;
+  width: calc(100vw - 20%);
 }
 iframe {
+  width: 95%;
+  height: auto;
   margin: 0;
   margin-bottom: 10px;
 }
@@ -96,39 +102,37 @@ h6 {
   margin: 5px;
   margin-bottom: 20px;
 }
-@media (max-width: 800px) {
+.center-text-mobile {
+    text-align: center;
+}
+@media (min-width: 800px) {
   header {
-    height: auto;
-    flex-direction: column;
-    padding-bottom: 10px;
+    height: 100px;
+    flex-direction: row;
+    padding-bottom: 0px;
   }
   .header-right-side {
-    justify-content: center;
-    height: auto;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
   }
   .cnt-container {
-    width: calc(100vw - 20px);
+    max-width: 800px;
   }
   hr {
-    width: calc(100vw - 10%);
-    height: 2px;
-    background-color: #000000;
+    width: 800px;
   }
   hr.short {
-    width: calc(100vw - 30%);
+    width: 350px;
   }
   hr.medium {
-    width: calc(100vw - 20%);
+    width: 500px;
   }
   iframe {
     width: 95%;
     height: auto;
   }
-  .center-text-mobile {
-    text-align: center
-  }
+  
 }
 /* BUTTON START */
 .button-links {
