--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-  width: 100vw;
   margin: 0;
   font-family: "Rubik Regular", sans-serif;
   background-color: whitesmoke;
@@ -13,7 +12,7 @@ img {
 }
 header {
   height: auto;
-  width: 100vw;
+  width: 100%;
   background-color: #FFFFFF;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
   display: flex;
@@ -42,7 +41,7 @@ ul {
   flex-wrap: wrap;
 }
 main {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -54,7 +53,7 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: calc(100vw - 20px);
+  width: calc(100% - 20px);
 }
 .page-title {
   margin: 20px 10px 20px 10px;
@@ -67,15 +66,15 @@ main {
   /*margin-bottom: 10px;*/
 }
 hr {
-  width: calc(100vw - 10%);
+  width: calc(100% - 10%);
   height: 2px;
   background-color: #000000;
 }
 hr.short {
-  width: calc(100vw - 30%);
+  width: calc(100% - 30%);
 }
 hr.medium {
-  width: calc(100vw - 20%);
+  width: calc(100% - 20%);
 }
 iframe {
   width: 95%;
