--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ h6 {
       color: white;
   }
   header {
-      background-color: ;
+      background-color: #191919;
       color: white;
   a:link {
       color: #D8D8D8;
