--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,17 @@
     flex-direction: column;
     padding-bottom: 10px;
   }
+  footer {
+    max-height: 35px;
+    width: 100%;
+    background-color: #FFFFFF;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px, rgba(0, 0, 0, 0.05) 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 20px;
+    margin-top: 15px;
+  }
   ul {
     animation-name: fadeIn;
     animation-duration: 0.8s;
@@ -69,6 +80,12 @@
     animation-name: fadeIn;
     animation-duration: 0.5s;
     margin: 20px 10px 20px 10px;
+  }
+  .page-title.footer_text {
+    animation-name: fadeIn;
+    animation-duration: 0.5s;
+    margin: 0;
+    max-height: 30px;
   }
   .page-title.project-title {
     margin: 10px;
@@ -124,7 +141,7 @@
       text-align: center;
   }
   @media (min-width: 800px) {
-    header {
+    header, footer {
       height: 100px;
       flex-direction: row;
       padding-bottom: 0px;
@@ -206,7 +223,7 @@
         background-color: #23272e;
         color: #d4d7dd;
     }
-    header {
+    header, footer {
         background-color: #181c20;
         color: #d4d7dd;
     }
