--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
     margin: 0;
     font-family: "Lato Regular", sans-serif;
     background-color: whitesmoke;
+    min-height: 100vh;
   }
   @font-face {
     font-family: Lato Regular;
@@ -44,6 +45,9 @@
     flex-direction: column;
     padding-top: 20px;
     margin-top: 15px;
+    text-align: center;
+    padding-bottom: 20px;
+    border-radius: 20px;
   }
   ul {
     animation-name: fadeIn;
@@ -58,7 +62,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(90deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 50%, rgba(0,0,0,0) 100%);
+    background: rgba(0,0,0,0.3);
     margin-bottom: 10px;
     padding-right: 0px;
   }
@@ -76,7 +80,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-flow: column nowrap;
   }
   .cnt-container {
     display: flex;
@@ -149,6 +153,358 @@
   .center-text-mobile {
       text-align: center;
   }
+  .box-flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: calc(100% - 20px);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+  }
+  .box-flex-element {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    height: 500px;
+    background-color: #404754;
+    border-radius: 15px;
+    margin: 10px;
+    text-align: center;
+  }
+  .bfe-darker {
+    background-color: rgb(44, 49, 58);
+  }
+  .box-flex-element-of-element {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 300px;
+    height: 80px;
+    background-color: #2c2f35;
+    border-radius: 15px;
+    margin: 10px;
+    text-align: center;
+    background-image: url(media/PowerPrompt.jpg);
+    transition: background-size 0.5s;
+    background-size: 100%;
+    background-position: 50% 50%;
+  }
+  .box-flex-element-of-element:hover {
+    background-size: 130%;
+  }
+  .box-element-btn {
+    font-family: "Lato Regular", sans-serif;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-flow: column nowrap;
+    font-size: 30px;
+    color: rgb(213, 213, 213);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: none;
+    transition: all 0.3s;
+    border-radius: 15px;
+    padding-bottom: 10px;
+  }
+  .beb-shorter {
+    height: 50px;
+  }
+  .b1 {
+    animation-name: fadeIn;
+    animation-duration: 1s;
+  }
+  .b2 {
+    animation-name: fadeIn;
+    animation-duration: 1.5s;
+  }
+  .b3 {
+    animation-name: fadeIn;
+    animation-duration: 2s;
+  }
+  .box-element-btn:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    box-shadow: rgba(255, 255, 255, 0.3) 0px 15px 25px, rgba(255, 255, 255, 0.3) 0px 5px 10px;
+  }
+  .no-margin-padding {
+    margin: 0;
+    padding: 0;
+  }
+  .big-text-label { 
+    font-size: 20px; 
+  }
+  .desc-label { 
+    font-size: 15px;
+  }
+  .link-icon-btn {
+    height: 80px;
+    width: 80px;
+    font-family: "Lato Regular", sans-serif;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-flow: column nowrap;
+    background-size: 80px 80px;
+    border: none;
+    transition: all 0.2s;
+    border-radius: 15px;
+    padding-bottom: 10px;
+    background-position: 50% 50%;
+    background-size: 100%;
+    background-color: rgb(35, 39, 46);
+    margin: 10px;
+  }
+  .link-icon-btn:hover {
+    background-size: 110%;
+    box-shadow: rgba(255, 255, 255, 0.3) 0px 15px 25px, rgba(255, 255, 255, 0.3) 0px 5px 10px;
+  }
+  .link-icons-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+  .about-me-text {
+    color: #e6e8ec;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 5px;
+  }
+  .bfe-title {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  .full-width {
+    width: 100vw;
+    height: auto;
+  }
+  .part-of-main {
+    border-radius: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  }
+  .no-color {
+    background-color: rgba(0, 0, 0, 0);
+  }
+  .pic-bg {
+    background-image: url(media/banner.png);
+  }
+  .title-bg-div {
+    background-color: #23272e;
+    border-radius: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .color-lighter-on-dark-mode {
+    background-color: #404754;
+  }
+  .projects-bg-color {
+    background-color: #2c313a;
+  }
+  .blog-post-title {
+    background-color: #23272e;
+    border-radius: 10px;
+    padding: 5px 20px 5px 20px;
+    margin: 10px;
+    min-width: 50%
+  }
+  .blog-post-div {
+    background-color: #2c313a;
+    border-radius: 10px;
+    margin: 10px;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+  }
+  .blog-post-text {
+    max-width: 90%;
+    text-align: center;
+    margin: 0;
+  }
+  .blog-post-media {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 20px;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .blog-post-img {
+    height: 250px;
+    width: auto;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    transition: box-shadow 0.2s;
+  }
+  .blog-post-img:hover {
+    box-shadow: rgba(255, 255, 255, 0.3) 0px 15px 25px, rgba(255, 255, 255, 0.3) 0px 5px 10px;
+  }
+  .projects-post-header {
+    background-color: #23272e;
+    border-radius: 10px;
+    padding: 5px 10px 5px 10px;
+    margin: 15px;
+    width: 90%;
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 3px 8px;
+    text-align: left;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+  }
+  .pph-left {
+    margin-left: 15px;
+    text-align: center;
+    width: 100%;
+  }
+  .pph-right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 0px;
+    width: 100%;
+  }
+  .projects-option-btn {
+    height: 50px;
+    font-family: "Lato Regular", sans-serif;
+    border: none;
+    transition: all 0.2s;
+    border-radius: 15px;
+    margin: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+    font-size: 18px;
+    min-width: 100px;
+    display: flex;
+    align-items: center;
+  }
+  .projects-option-btn:hover {
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 15px 25px, rgba(255, 255, 255, 0.2) 0px 5px 10px;
+  }
+  .btn-green { background-color: rgb(23, 135, 5); }
+  .btn-green:hover { background-color: rgb(18, 100, 5); }
+  .btn-red { background-color: rgb(255, 20, 20); }
+  .btn-red:hover { background-color: rgb(172, 16, 16); }
+  .btn-blue { background-color: rgb(88, 101, 242); }
+  .btn-blue:hover { background-color: rgb(37, 47, 156); }
+  .btn-gray { background-color: rgb(44, 49, 58); }
+  .btn-gray:hover { background-color: rgb(106, 106, 106); }
+  .projects-post-div {
+    background-color: #2c313a;
+    border-radius: 10px;
+    margin: 10px;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+  }
+  .projects-post-text {
+    max-width: 90%;
+    text-align: center;
+    margin: 0;
+  }
+  .projects-post-media {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 20px;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .projects-post-img {
+    height: 250px;
+    width: auto;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    transition: box-shadow 0.2s;
+  }
+  .projects-post-img:hover {
+    box-shadow: rgba(255, 255, 255, 0.3) 0px 15px 25px, rgba(255, 255, 255, 0.3) 0px 5px 10px;
+  }
+  .os-icon {
+    height: 25px;
+    width: auto;
+    margin-left: 10px;
+  }
+  .dls-list-element {
+    background-color: rgb(44, 49, 58);
+    border-radius: 10px;
+    padding: 5px 10px 5px 10px;
+    margin: 5px;
+    width: 90%;
+    min-height: 50px;
+    text-align: left;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+  }
+  .dle-bm { margin-bottom: 20px; }
+  .dle-left {
+    margin-left: 15px;
+    text-align: center;
+    width: 100%;
+  }
+  .dle-right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 0px;
+    width: 100%;
+  }
+  .dls-download-btn {
+    height: 40px;
+    font-family: "Lato Regular", sans-serif;
+    border: none;
+    transition: all 0.2s;
+    border-radius: 15px;
+    margin: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+    font-size: 18px;
+    min-width: 100px;
+    display: flex;
+    align-items: center;
+  }
+  .dls-download-btn > .os-icon {
+    height: 20px;
+    width: auto;
+  }
+  .dls-download-btn:hover {
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 15px 25px, rgba(255, 255, 255, 0.2) 0px 5px 10px;
+  }
+  .pcspecs-max-width { 
+    max-width: 800px;
+    display: flex;
+    flex-flow: column wrap;
+  }
+  .flex-row {
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0;
+  }
+  .contact-row {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    width: 90%;
+  }
+  .contact-row > img {
+    height: 50px;
+    width: 50px;
+  }
   @media (min-width: 800px) {
     header, footer {
       height: 100px;
@@ -163,6 +519,7 @@
     .header-left-side {
       padding-right: 5px;
       margin-bottom: 0px;
+      background: linear-gradient(90deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0.4) 50%, rgba(0,0,0,0) 100%);
     }
     .cnt-container {
       max-width: 800px;
@@ -175,6 +532,51 @@
     }
     hr.medium {
       width: 500px;
+    }
+    .projects-post-header {
+      padding: 5px 10px 5px 10px;
+      margin: 15px;
+      width: 100%;
+      flex-flow: row nowrap;
+    }
+    .pph-left {
+      margin-left: 15px;
+      width: 100%;
+      text-align: left;
+    }
+    .pph-right {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      margin-right: 0px;
+      width: 100%;
+    }
+    .dls-list-element {
+      padding: 5px 10px 5px 10px;
+      margin: 5px;
+      width: auto;
+      min-width: 500px;
+      flex-flow: row nowrap;
+    }
+    .dle-left {
+      margin-left: 15px;
+      width: 100%;
+      text-align: left;
+    }
+    .dle-right {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      margin-right: 0px;
+      width: 100%;
+    }
+    .flex-row {
+      flex-direction: row;
+      padding-left: 30px;
+      padding-right: 10px;
+    }
+    .contact-row {
+      width: 850px;
     }
   }
   /* BUTTON START */
@@ -224,8 +626,36 @@
     html {
       background-color: white;
     }
+    footer {
+      color: white;
+    }
     .button-links {
-        color: #333333;
+        color: #151515;
+        background-color: #cacaca80;
+    }
+    .box-flex-element {
+      background-color: rgb(216, 216, 216);
+    }
+    .about-me-text {
+      color: #151515;
+    }
+    .link-icon-btn {
+      background-color: rgb(188, 188, 188);
+    }
+    .color-lighter-on-dark-mode, .full-width, .part-of-main, .projects-post-div{
+      background-color: rgb(216, 216, 216)
+    }
+    .title-bg-div, .projects-post-header {
+      background-color: rgb(188, 188, 188);
+    }
+    .no-color {
+      background-color: rgba(0, 0, 0, 0);
+    }
+    .blog-post-title, .dls-list-element {
+      background-color: rgb(188, 188, 188);
+    }
+    .blog-post-div {
+      background-color: rgb(245, 245, 245);
     }
   }
   @media (prefers-color-scheme: dark) {
@@ -250,6 +680,9 @@
     .button-links:hover {
       background-color: #23272ec5;
       box-shadow: rgba(255, 255, 255, 0.3) 0px 15px 25px, rgba(255, 255, 255, 0.3) 0px 5px 10px;
+    }
+    .box-element-btn:hover {
+      box-shadow: rgba(255, 255, 255, 0.3) 0px 15px 25px, rgba(255, 255, 255, 0.3) 0px 5px 10px; 
     }
   }
   
